fix(styles): Make parent/leaf layouts align

--- a/src/styles/ivh-treeview.less
+++ b/src/styles/ivh-treeview.less
@@ -7,42 +7,48 @@
  * @copyright 2014 iVantage Health Analytics, Inc.
  */
 
-ul.ivh-tree {
+ul.ivh-treeview {
   list-style-type: none;
-  padding-left: 25px;
+
+  padding-left: 0;
+  ul.ivh-treeview {
+    padding-left: 25px;
+  }
   
   li {
-    .ivh-tree-toggle-right { display: none; }
-    .ivh-tree-toggle-leaf { display: none; }
-    &.ivh-tree-node-leaf {
-      .ivh-tree-toggle-down { display: none; }
-      .ivh-tree-toggle-leaf { display: inline-block; }
-      .ivh-tree-node-label { cursor: auto; }
-      .ivh-tree-toggle { cursor: auto }
+    .ivh-treeview-toggle-right { display: none; }
+    .ivh-treeview-toggle-leaf { display: none; }
+    &.ivh-treeview-node-leaf {
+      .ivh-treeview-toggle-down { display: none; }
+      .ivh-treeview-toggle-leaf { display: inline-block; }
+      .ivh-treeview-node-label { cursor: auto; }
+      .ivh-treeview-toggle { cursor: auto }
     }
-    &.ivh-tree-node-collapsed {
-      .ivh-tree-toggle-right { display: inline-block; }
-      .ivh-tree-toggle-down { display: none; }
-      ul.ivh-tree {
+    &.ivh-treeview-node-collapsed {
+      .ivh-treeview-toggle-right { display: inline-block; }
+      .ivh-treeview-toggle-down { display: none; }
+      ul.ivh-treeview {
         display: none;
       }
     }
     
-    .ivh-tree-checkbox {
+    .ivh-treeview-checkbox {
       position: relative;
       top: 2px;
     }
     
-    .ivh-tree-node-label {
+    .ivh-treeview-node-label {
       cursor: pointer;
     }
 
-    .ivh-tree-toggle {
+    .ivh-treeview-toggle {
       font-size: 65%;
       position: relative;
       top: -1px;
-      margin-right: 5px;
+      margin-right: 3px;
       cursor: pointer;
+      width: 12px;
+      text-align: center;
     }
   }
 }
